fix: overlap in featured post

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-multiple-carousel__arrow {
+    z-index: 5 !important;
+}
